# malbolge-toolkit

./: .codespellrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  DOCUMENTATION_SUMMARY.md  MalbolgeInterpreter.py  README.md  README_APPEND.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: actionlint.yml  ci.yml  coverage.yml  docs-and-wiki.yml  format.yml  markdown.yml  security.yml  typecheck.yml
benchmarks/: baseline.json  bench_generator.py  bench_interpreter.py  capture_baseline.py  compare_baseline.py  cycle_repeat_report.py  render_benchmark_reports.py  summarize_baseline.py
docs/: MALBOLGE_PRIMER.md  RELEASE_NOTES.md  TUTORIAL.md  requirements.txt
docs/assets/: trailing-slash.js
examples/: README.md  analyze_program.py  debug_generation.py  profile_generator.py  simple_hello.py  trace_analyzer.py  trace_summary.py  trace_viz.py
examples/samples/: PROGRAM_ASCII.txt  PROGRAM_OP_CODES.txt  README.md
malbolge/: __init__.py  encoding.py  generator.py  interpreter.py  utils.py
malbolge/advanced/: __init__.py
malbolge/cli/: __init__.py  __main__.py  main.py
notebooks/: Malbolge_Advanced_Tour.ipynb
scripts/: __init__.py  check_markdown_links.py  check_markdown_urls.py  remove_unused_type_ignores.py
scripts/docs/: __init__.py  build_pages.py
scripts/wiki/: __init__.py  sync_wiki.py
tests/: test_cli.py  test_docs_config.py  test_encoding.py  test_generator.py  test_interpreter.py  test_wiki_sync.py
