[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malbolge-generator"
version = "0.1.0"
description = "Automated Malbolge program generator and interpreter"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Wallstop"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wallstop/MalbolgeGenerator"
Documentation = "https://github.com/wallstop/MalbolgeGenerator"
Issues = "https://github.com/wallstop/MalbolgeGenerator/issues"

[tool.setuptools]
include-package-data = false
py-modules = ["MalbolgeInterpreter"]

[tool.setuptools.packages.find]
include = ["malbolge", "malbolge.*"]
exclude = ["notebooks", "notebooks.*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
]
ignore = [
    # Allow module-level prints for CLI utilities.
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"MalbolgeInterpreter.py" = ["N802"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
plugins = []

[[tool.mypy.overrides]]
module = ["linkcheckmd", "linkcheckmd.*"]
ignore_missing_imports = true
